<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Reversi</string>
	<string name="p1">White</string>
	<string name="p2">Black</string>
	<string name="settings_label">Settings&#8230;</string>
	<string name="show_hints">Show allowed positions</string>
	<string name="settings_shortcut">s</string>
	<string name="restart_label">Start a new game</string>
	<string name="restart_shortcut">r</string>
	<string name="show_hints_description">If is selected, all possible positions for the
		active player are shown</string>
	<string name="confirm_title">New Game</string>
	<string name="yes_caption">Yes</string>
	<string name="no_caption">No</string>
	<string name="new_game_msg">Are you sure you want to start a new game?</string>
	<string name="game_finished">The winner is player %s. Do you want to start again?</string>
	<string name="is_droid_opponent">Play against droid?</string>
	<string name="is_droid_opponent_description">Turn it on to play against Android. Turn it off to play against Human.</string>
	<string name="stats_label">Game Statistics</string>
	<string name="stats_shortcut">Stats</string>
	<string name="select_difficulty">Select the desired difficulty</string>
	<string name="starting_score"> 2</string>
	<string name="undo_label">Undo</string>
	<string name="undo_shortcut">un</string>
	<string name="redo_label">Redo</string>
	<string name="redo_shortcut">re</string>
	<string name="exit_label">Exit</string>
	<string name="exit_shortcut">ex</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>
	<string name="easy_value">0</string>
	<string name="medium_value">1</string>
	<string name="hard_value">2</string>
	<string name="difficulty_title">Difficulty</string>
	<string name="difficulty_summary">Chose the difficulty at which the AI will play.</string>
	<string name="difficulty_level">difficulty_level</string>
	<string name="show_allowed_positions">show allowed postions?</string>
	<string name="white_label">White (goes second)</string>
	<string name="black_label">Black (goes first)</string>
	<string name="player_color_summary">Chose which color you play against the AI</string>
	<string name="player_color_title">"Player\'s color"</string>
</resources>
