<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="25dip">
	<TextView android:text="@string/difficulty_level" android:id="@+id/difficulty_level"
			android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:paddingRight="25dip">
		<TextView android:text="@string/p1" android:id="@+id/txtPlayer1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"/>
		<TextView android:text="@string/starting_score" android:id="@+id/txtPlayer1Counter"
			android:minWidth="30dp" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/p2" android:id="@+id/txtPlayer2"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/starting_score" android:id="@+id/txtPlayer2Counter"
			android:minWidth="30dp" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<team2.reversi.GameBoard
		android:id="@+id/gameBoard" 
		android:layout_weight="0"		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="top"/>
	
</LinearLayout>
